Fix vertical table alignment

--- a/static/css/base.sass
+++ b/static/css/base.sass
@@ -101,6 +101,7 @@ main
 
     td
       padding: .5rem
+      vertical-align: middle
 
     th, td
       border-bottom: 1px solid transparentize($brown-layover, .5)
@@ -223,6 +224,7 @@ nav:hover
   font-family: $font_headings
   border: 1px solid $primary-blue
   +base_transition
+  vertical-align: middle
 
 .btn-secondary:hover
   color: lighten($primary-blue, 20%)
